syntax = "proto3";

package raft;

option java_multiple_files = true;

message LogEntry {
  uint64 term = 1;
  uint64 index = 2;
  bytes payload = 3;
  CommandType command_type = 4;
}

enum CommandType {
  NO_OP = 0;
  CLIENT_COMMAND = 1;
  HEARTBEAT = 2;
}

message AppendEntriesRequest {
  uint64 term = 1;
  string leaderId = 2;
  uint64 prevLogIndex = 3;
  uint64 prevLogTerm = 4;
  repeated LogEntry entries = 5;
  uint64 leaderCommit = 6;
}

message AppendEntriesResponse {
  uint64 term = 1;
  bool success = 2;
  uint64 lastLogIndex = 3;
}

message RequestVoteRequest {
  uint64 term = 1;
  string candidateId = 2;
  uint64 lastLogIndex = 3;
  uint64 lastLogTerm = 4;
}

message RequestVoteResponse {
  uint64 term = 1;
  bool voteGranted = 2;
}

service RaftService {
  rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse);
  rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse);
}
